fix spacing and add styling to better match the mockup

--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -4,7 +4,6 @@
   line-height: 1.8rem;
   position: relative;
   border-top: 2px solid $color-4;
-  margin-bottom: 4rem;
 
   @include tablet {
     font-size: 1.4rem;
