--- a/styles/partials/_js-comment.scss
+++ b/styles/partials/_js-comment.scss
@@ -103,16 +103,13 @@
 }
 
 .comment__form-container {
-  max-height: 70vw;
-
   @include tablet {
-    height: 35vw;
+    padding-bottom: 3rem;
     padding-left: 7rem;
     margin-right: 14rem;
   }
 
   @include desktop {
-    height: 75vh;
     padding-left: 17rem;
     margin-right: 20rem;
   }
