--- a/styles/partials/_showsHero.scss
+++ b/styles/partials/_showsHero.scss
@@ -10,17 +10,18 @@
     font-weight: 400;
     line-height: 32px;
     padding: 2.4rem 1.6rem 1.6rem;
-    position: absolute;
 
     @include tablet {
       font-size: 2.4rem;
-      padding-left: 3.6rem;
+      padding-left: 5rem;
+      padding-bottom: 1rem;
+      padding-top: 10rem;
     }
 
     @include desktop {
       font-size: 3.6rem;
       position: absolute;
-      top: 29rem;
+      top: 24rem;
       left: 6rem;
     }
   }
@@ -32,9 +33,9 @@
     height: 22rem;
 
     @include tablet {
-      padding-top: 5rem;
       max-width: 360%;
-      height: 46rem;
+      height: 40rem;
+      padding: 0rem;
     }
 
     @include desktop {
@@ -43,7 +44,7 @@
       justify-content: space-between;
       align-items: center;
       max-width: 130rem;
-      height: 70rem;
+      height: 80rem;
     }
   }
 
@@ -60,7 +61,7 @@
       font-weight: 600;
       font-size: 6rem;
       line-height: 6.8rem;
-      padding-left: 3.6rem;
+      padding-left: 5rem;
     }
 
     @include desktop {
@@ -69,21 +70,31 @@
   }
 
   &__song-container {
-    width: 40%;
+    width: 100%;
     padding-left: 1.6rem;
     padding-right: 1.6rem;
 
+    @include tablet {
+      width: 52%;
+      padding-left: 5rem;
+    }
+
     @include desktop {
-      margin-right: 7.5rem;
-      width: 40%;
+      margin-right: 11rem;
+      width: 37%;
     }
   }
 
   &__song {
-    border-radius: 10px;
+    border-radius: 3px;
     background-color: white;
     width: 100%;
     height: 100px;
+
+    @include tablet {
+      margin-top: 2rem;
+      width: 110%;
+      height: 15rem;
+    }
   }
 }
-
